Final configuration pom.xml qui semble maintenant fonctionner pour push sur le repository nexus.